[package]
name = "piston2d-graphics_tree"
version = "0.39.0"
authors = ["Sven Nilsen <bvssvni@gmail.com>"]
license = "MIT OR Apache-2.0"
keywords = ["graphics", "tree", "2d", "piston"]
description = "A 2D graphics backend for Piston-Graphics that stores and optimizes commands"
readme = "README.md"
repository = "https://github.com/PistonDevelopers/graphics_tree.git"
homepage = "https://github.com/PistonDevelopers/graphics_tree"
exclude = ["assets/*"]

[lib]
name = "graphics_tree"

[dependencies]
piston2d-graphics = "0.44.0"
piston-texture = "0.9.0"
image = "0.25.1"
range = "1.0.0"

[dev-dependencies]
piston_window = "0.132.0"
rand = "0.8.5"
fps_counter = "3.0.0"
vecmath = "1.0.0"
